--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,4 +1,3 @@
-site_author: 'Skribb11es'
 repo_url: https://github.com/DallasFormulaRacing/better-onboarding
 
 theme:
@@ -6,11 +5,14 @@ theme:
   main_color: '#E97600'
   toc_depth: 3
 
-
 extra:
-  version: 'v2.1.0'
+  version: 'v2.1.1'
   
 site_name: DFR Software Wiki
+site_description: 'The home of DFR Software'
+
+remote_branch: main
+remote_name: origin
 
 nav:
   - Home: home.md
@@ -22,7 +24,7 @@ nav:
     - Learning SQL: resources/learning-SQL.md
     - Learning Docker: resources/learning-Docker.md
   - Projects:
-    - Data API: projects/data-api.md
+    - Projects: projects/projects.md
   - About:
     - About: about/about.md
     - Style Guide: about/style-guide.md
